update url, add static folder

--- a/app/templates/app/snippet.html
+++ b/app/templates/app/snippet.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include 'app/nav.html' %}
-    <form action="/snippet/" method="POST">
+    <form action="/" method="POST">
       <div class="max-w-2xl mx-auto">
         <label
           for="message"
