--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <title>codemash</title>
     <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="app/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="app/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="app/favicon-16x16.png"
+    />
+    <link rel="manifest" href="app/site.webmanifest" />
+    <link rel="mask-icon" href="app/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
