--- a/app/templates/app/snippet.html
+++ b/app/templates/app/snippet.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% include 'app/nav.html' %}
-    <form action="/" method="POST">
+    <form onsubmit="upload_code()" action="/" method="POST">
       {% csrf_token %}
       <div class="max-w-2xl mx-auto">
         <label
@@ -27,6 +27,7 @@
           type="text"
           class="mb-6 bg-gray-100 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-50 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500"
           name="author"
+          id="author"
           placeholder="Your Name"
         />
         <button
@@ -50,9 +51,32 @@
           </div>
         </div>
         {% endif %}
-
-        <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
+        <!-- <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/assets/css/suneditor.css" rel="stylesheet"> -->
+        <!-- <link href="https://cdn.jsdelivr.net/npm/suneditor@latest/assets/css/suneditor-contents.css" rel="stylesheet"> -->
       </div>
     </form>
+
+    <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/css/suneditor.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/suneditor@latest/dist/suneditor.min.js"></script>
+    <script>
+      function upload_code() {
+        data = {
+          code: editor.getContents(),
+          author: document.querySelector("#author").value,
+        };
+        fetch("http://localhost:8000/", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data),
+        })
+          .then((response) => response.json())
+          .then((response_data) => {});
+        console.log(editor.getContents());
+      }
+    </script>
   </body>
 </html>
