--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -171,7 +171,7 @@
           .then(() => {
             setTimeout(() => {
               location.reload();
-            }, 1000);
+            }, 300);
           })
           .catch((error) => console.error(error));
       }
@@ -191,13 +191,11 @@
       if (event.keyCode === 37) {
         // Left arrow key pressed
         leftKeyPressed();
-        event.preventDefault();
-        return false;
+        return true;
       } else if (event.keyCode === 39) {
         // Right arrow key pressed
         rightKeyPressed();
-        event.preventDefault();
-        return false;
+        return true;
       }
     });
 
